Data/Practice_1/check
  File "/Users/siavashmortezavi/github_repos/2017-msan694-example/Data/Practice_1/hw2.py", line 17
    print Evens_sorted.histogram(3)
                     ^
SyntaxError: invalid syntax
